--- a/connectedin/perfis/templates/perfil.html
+++ b/connectedin/perfis/templates/perfil.html
@@ -12,6 +12,7 @@
 
 <body>
     <h1>Detalhe perfil</h1>
+    "nome": {{ perfil.nome }}, "email": {{ perfil.email }}
 
     <script src="" async defer></script>
 </body>
